# sp500

./: .gitignore  aws_layer.sh  pyproject.toml  requirements.txt  script.sh
sp500/: scrape.ipynb  scrape.py  upload.py
sp500_to_csv/: lambda_function.py
