[tool.poetry]
name = "sp500"
version = "0.1.0"
description = ""
authors = ["gustavwogen <gustavwogen@gmail.com>"]
readme = "README.md"
packages = [{include = "sp500"}]

[tool.poetry.dependencies]
python = "3.10.12"
requests = "~2.31.0"
beautifulsoup4 = "~4.12.2"
pandas = "~2.0.2"
pyodbc = "~4.0.39"
sqlalchemy = "~2.0.16"
mysql-connector-python = "~8.0.33"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"